--- a/css/main.css
+++ b/css/main.css
@@ -21,50 +21,25 @@ body {
   width: 220px;
   max-width: 300px;
   height: 400px;
-  overflow: hidden;
-  /* color: #fcfdfe; */
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 0 3px rgba(0, 0, 0, 0.4);
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  transition: all 0.2s;
-  background-color: orange;
 }
 .card:hover, .card:focus {
+  -moz-transform: scale(1.03);
+  -webkit-transform: scale(1.03);
   transform: scale(1.03) skewX();
+  -moz-transform-origin: bottom;
+  -webkit-transform-origin: bottom;
   transform-origin: bottom;
   box-shadow: 0 7px 8px rgba(0, 0, 0, 0.05), 0 3 3px rgba(0, 0, 0, 0.01);
-}
-.card:nth-child(5n+1) {
-  background-image: linear-gradient(to top, #aaafad 0%, #60efff 30%);
-}
-.card:nth-child(5n+2) {
-  background-image: linear-gradient(to top, #696eff 0%, #f8acff 30%);
-}
-.card:nth-child(5n+3) {
-  background-image: linear-gradient(to top, #ff1b6b 0%, #45caff 30%);
-}
-.card:nth-child(5n+4) {
-  background-image: linear-gradient(to top, #ff930f 0%, #fff95b 30%);
-}
-.card:nth-child(5n+5) {
-  background-image: linear-gradient(to top, #ff0f7b 0%, #f89b29 30%);
 }
 .card__image-container {
   height: 200px;
   /* background-color: blue; */
   /* overflow: hidden; */
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 200px, 0 180px);
-  clip-path: polygon(0 0, 100% 0, 100% 200px, 0 180px);
-}
-.card:hover .card__image-container, .card:focus .card__image-container {
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 190px, 0 200px);
-  clip-path: polygon(0 0, 100% 0, 100% 190px, 0 200px);
 }
 .card__image {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transition: 0.2s;
 }
 .card:hover .card__image, .card:focus .card__image {
@@ -90,13 +65,11 @@ body {
   }
   .card .card__image-container, .card .card__image-container {
     width: 40%;
-    -webkit-clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
-            clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
   }
   .card:hover .card__image-container, .card:focus .card__image-container {
     width: 40%;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-            clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
 }
 
@@ -126,13 +99,10 @@ body {
 /***********************************
             NAV BAR
 ***********************************/
-.nav-bar {
-  background-color: mediumturquoise;
-}
 .nav-bar__nav-list {
   display: flex;
   list-style-type: none;
-  justify-content: center;
+  justify-content: space-around;
 }
 @media (max-width: 768px) {
   .nav-bar__nav-list {
@@ -141,12 +111,10 @@ body {
 }
 .nav-bar__nav-item {
   text-align: center;
-  background-color: pink;
 }
 .nav-bar__nav-link {
   display: block;
-  background-color: purple;
-  color: #fff;
+  color: #333;
   padding: 1em 2em;
   text-decoration: none;
 }
@@ -160,35 +128,29 @@ body {
             SEARCH BAR
 ***********************************/
 .search-bar {
-  background-color: olivedrab;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 .search-bar__logo-container, .search-bar__form-container {
-  padding: 1em;
-}
-.search-bar__logo-container {
-  background-color: yellow;
+  padding: 3em;
 }
 .search-bar__form-container {
-  background-color: gold;
   flex-basis: 100%;
   display: flex;
+  line-height: 3em;
   justify-content: center;
 }
-.search-bar__form-label {
-  background-color: greenyellow;
-}
 .search-bar__form-search {
-  background-color: deeppink;
   width: 70%;
+  height: 100%;
+  align-self: center;
 }
 .search-bar__form-submit {
   background-color: darkslategray;
 }
 .search-bar__carrito-container {
   flex: 0 0 3em;
-  background-color: goldenrod;
 }
 
 /***********************************
@@ -246,4 +208,6 @@ body {
   .cards-container {
     gap: 2em;
   }
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
