--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,168 +2,145 @@
             HEADER
 ***********************************/
 .main-header {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    @media (max-width: 768px) {
-        & {
-            flex-direction: column-reverse;
-        }
-    }    
-
+  @media (max-width: 768px) {
+    & {
+      flex-direction: column-reverse;
+    }
+  }
 }
 
 #menu {
-    display: none;
+  display: none;
 
-    &:checked + .nav-bar {
-        display: block;
-    }
-    
-    &:checked ~ .search-bar .menu-toggle__label {
-        background-color: yellow;
-    }
+  &:checked + .nav-bar {
+    display: block;
+  }
 
+  &:checked ~ .search-bar .menu-toggle__label {
+    background-color: yellow;
+  }
 }
 
 /***********************************
             NAV BAR
 ***********************************/
 .nav-bar {
-    background-color: mediumturquoise;
 
-    &__nav-list {
-        display: flex;
-        list-style-type: none;
-        justify-content: center;
-
-
-        @media (max-width: 768px) {
-            & {
-                flex-direction: column;
-            }
-        }
-
-    }
-
-    &__nav-item {
-        text-align: center;
-        background-color: pink;
-    }
-
-    &__nav-link {
-        display: block;
-        background-color: purple;
-        color: #fff;
-        padding: 1em 2em;
-        text-decoration: none;
-    }
+  &__nav-list {
+    display: flex;
+    list-style-type: none;
+    justify-content: space-around;
 
     @media (max-width: 768px) {
-        & {
-            display: none;
-        }
-    }    
+      & {
+        flex-direction: column;
+      }
+    }
+  }
 
+  &__nav-item {
+    text-align: center;
+  }
+
+  &__nav-link {
+    display: block;
+    color: #333;
+    padding: 1em 2em;
+    text-decoration: none;
+  }
+
+  @media (max-width: 768px) {
+    & {
+      display: none;
+    }
+  }
 }
-
 
 /***********************************
             SEARCH BAR
 ***********************************/
 .search-bar {
-    background-color: olivedrab;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  &__logo-container,
+  &__form-container {
+    padding: 3em;
+  }
+
+  &__form-container {
+    flex-basis: 100%;
     display: flex;
-    justify-content: space-between;
+    line-height: 3em;
+    justify-content: center;
+  }
 
-    &__logo-container,
-    &__form-container {
-        padding: 1em;
-    }
-    
-    &__logo-container {
-        background-color: yellow;
-    }
-    
-    &__form-container {
-        background-color: gold;
-        flex-basis: 100%;
-        display: flex;
-        justify-content: center;
-    }
-    
-    &__form-label {
-        background-color: greenyellow;
-    }
-    
-    &__form-search {
-        background-color: deeppink;
-        width: 70%;
-    }
-    
-    &__form-submit {
-        background-color: darkslategray;
-    }
-    
-    &__carrito-container {
-        flex: 0 0 3em;
-        background-color: goldenrod;
-    }
-    
+  &__form-label {
+  }
 
+  &__form-search {
+    width: 70%;
+    height: 100%;
+    align-self: center;
+  }
 
+  &__form-submit {
+    background-color: darkslategray;
+  }
+
+  &__carrito-container {
+    flex: 0 0 3em;
+  }
 }
-
 
 /***********************************
             MENU TOGGLE
 ***********************************/
 .menu-toggle {
-    display: none;
-    background-color: red;
-    flex: 0 0 3em;
-    position: relative;
-    cursor: pointer;
+  display: none;
+  background-color: red;
+  flex: 0 0 3em;
+  position: relative;
+  cursor: pointer;
 
+  &__label {
+    display: block;
+    background-color: black;
+    /* width: 100%; */
+    height: 100%;
+  }
 
+  &__top-bread,
+  &__meat,
+  &__bottom-bread {
+    display: block;
+    background-color: #333;
+    height: 0.2em;
+    position: absolute;
+    left: 0.5em;
+    right: 0.5em;
+  }
 
-    &__label {
-        display: block;
-        background-color: black;
-        /* width: 100%; */
-        height: 100%;
-    }
-    
-    &__top-bread,
-    &__meat,
-    &__bottom-bread {
-        display: block;
-        background-color: #333;
-        height: .2em;
-        position: absolute;
-        left: .5em;
-        right: .5em;
-    }
-    
-    &__top-bread {
-        top: .8em;
-    }
-    
-    &__meat {
-        top: 50%;
-        margin-top: -.1em;;
-    }
-    
-    &__bottom-bread {
-        bottom: .8em;
-    }
-    
+  &__top-bread {
+    top: 0.8em;
+  }
 
-    @media (max-width: 768px) {
-        & {
-            display: block;
-        }    
-    }
+  &__meat {
+    top: 50%;
+    margin-top: -0.1em;
+  }
 
+  &__bottom-bread {
+    bottom: 0.8em;
+  }
+
+  @media (max-width: 768px) {
+    & {
+      display: block;
+    }
+  }
 }
-
