--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -2,6 +2,10 @@
     background-color: #f1f2f3;
     padding: 1em;
 }
+.section-cards__header {
+    text-align: center;
+    font-size: 1.4em;
+}
 
 .cards-container {
     display: flex;
