--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,6 +3,7 @@
 ***********************************/
 .main-header {
   display: flex;
+  margin: 0 5%;
   flex-direction: column;
 
   @media (max-width: 768px) {
@@ -28,6 +29,7 @@
             NAV BAR
 ***********************************/
 .nav-bar {
+    margin-top: 5%;
 
   &__nav-list {
     display: flex;
@@ -50,6 +52,7 @@
     color: #333;
     padding: 1em 2em;
     text-decoration: none;
+    font-size: 1.3em;
   }
 
   @media (max-width: 768px) {
@@ -69,17 +72,21 @@
 
   &__logo-container,
   &__form-container {
-    padding: 3em;
+      padding: 3em;
+    }
+  &__logo-container { 
+      font-size: 3em;
+      padding: 0.5em 0;
   }
-
   &__form-container {
     flex-basis: 100%;
     display: flex;
     line-height: 3em;
-    justify-content: center;
+    justify-content: space-evenly;
   }
 
   &__form-label {
+      font-size: 2em;
   }
 
   &__form-search {
@@ -87,14 +94,38 @@
     height: 100%;
     align-self: center;
   }
-
+  input[type="submit"] {
+    background-color: white !important;
+  };
   &__form-submit {
-    background-color: darkslategray;
+    border: none;
+    font-size: 2em;
   }
 
   &__carrito-container {
     flex: 0 0 3em;
+    font-size: 1.7em;
   }
+  .type {
+    display:inline-flex;
+  }
+    .type span {
+    word-break: break-all;
+    height: 1.2em;
+    width:0%;
+    overflow: hidden;
+    animation:t 4s linear infinite alternate;
+    }
+    .type span:before {
+    content:" ";
+    display:inline-block;
+    }
+    .nav-menu__link {
+        text-align: left;
+    }
+    @keyframes t{
+    90%,100% {width:100%}
+    }
 }
 
 /***********************************
