--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+
+@font-face {
+    font-family: Lumiera;
+    src: url('/assets/Lumiera.ttf');
+}
 body {
-    font-family: 'Lobster', sans-serif;
+    font-family: 'Lumiera', sans-serif;
 }
