--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,12 @@ body {
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: Lumiera;
+  src: url("/assets/Lumiera.ttf");
+}
 body {
-  font-family: "Lobster", sans-serif;
+  font-family: "Lumiera", sans-serif;
 }
 
 .card {
@@ -138,10 +142,11 @@ body {
 }
 .nav-bar__nav-link:hover {
   border: 1px solid transparent;
+  color: #f1f2f3;
   background: red url(https://i.postimg.cc/wBXGXbWN/pixel.png);
   transition-delay: 0.8s;
   background-size: 180px;
-  animation: animate 0.5s steps(8) forwards;
+  animation: animate 0.5s steps(10) forwards, text-hover 0.9s steps(10) backwards;
 }
 .nav-bar__nav-link:last-of-type {
   border: 1px solid black;
@@ -152,9 +157,40 @@ body {
 @keyframes animate {
   0% {
     background-position-y: 0;
+    opacity: 1;
+  }
+  25% {
+    opacity: 0.9;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  75% {
+    opacity: 0.5;
   }
   100% {
     background-position-y: -480px;
+    opacity: 0.4;
+  }
+}
+@keyframes text-hover {
+  0% {
+    color: #333;
+  }
+  25% {
+    color: #333333;
+  }
+  50% {
+    text-shadow: -1px 0px 10px black;
+    color: #333333bd;
+  }
+  75% {
+    text-shadow: -1px 0px 8px black;
+    color: #333333bd;
+  }
+  100% {
+    color: #f1f2f3;
+    text-shadow: -1px 0px 2px #00000036;
   }
 }
 @media (max-width: 768px) {
